# PokeReader

./: .gitignore  3ds.json  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  pkrd.rsf
.cargo/: config
.github/workflows/: canary_release.yml  draft_release.yml  lint_test_build.yml  main.yml
3gx/: Makefile  PokeReader.plgInfo
3gx/includes/: common.h  csvc.h  font.h  hid.h  memmem.h  ov.h  plgldr.h  pnp.h  pokereader.h  title_info.h
3gx/sources/: 3gx_crt0.s  csvc.s  hid.c  main.c  memmem.c  ov.c  pnp.c  title_info.c
launcher/: Makefile  pkrd-launcher.rsf
launcher/include/: csvc.h  launch.h
launcher/source/: csvc.s  launch.c  main.cpp
reader_core/: Cargo.toml  build.rs  rustfmt.toml
reader_core/.cargo/: config.toml
reader_core/src/: allocator.rs  draw.rs  lib.rs  menu.rs  title.rs
reader_core/src/crystal/: draw.rs  frame.rs  game_lib.rs  hook.rs  mod.rs  pk2.rs  reader.rs
reader_core/src/gen6/: draw.rs  game_lib.rs  hook.rs  mod.rs  oras_frame.rs  reader.rs  rng.rs  xy_frame.rs
reader_core/src/gen7/: call_rates.rs  draw.rs  frame.rs  game_lib.rs  hook.rs  mod.rs  reader.rs
reader_core/src/pnp/: bindings.rs  hook.rs  input.rs  memory.rs  mod.rs  print.rs  time.rs  utils.rs
reader_core/src/rng/: mt.rs  rng_wrapper.rs  sfmt.rs  tiny_mt.rs
reader_core/src/transporter/: draw.rs  frame.rs  hook.rs  mod.rs  reader.rs  rng.rs
reader_core/src/utils/: circular_counter.rs  daycare.rs  game_fn.rs  help_menu.rs  hook_game_branch.rs  hook_gen6_seed.rs  menu.rs  mod.rs  show_view.rs  sub_menu.rs  sub_menu_capture.rs
src/: draw.rs  heap_allocator.rs  lib.rs  log.rs  main.rs  menu.rs  title.rs
src/gen6/: draw.rs  mod.rs  oras_frame.rs  reader.rs  rng.rs  xy_frame.rs
src/gen7/: draw.rs  frame.rs  reader.rs
src/pkrd/: context.rs  frame_pause.rs  mod.rs  notification.rs  pkrd_game.rs  request_handler.rs
src/pkrd/display/: color.rs  context.rs  font.rs  mod.rs  screen.rs
src/pkrd/game/: hookable_process.rs  mod.rs  supported_title.rs
src/pkrd/game/oras/: frame.rs  hook.rs  reader.rs
src/pkrd/game/sm/: frame.rs  hook.rs  mod.rs  reader.rs
src/pkrd/game/usum/: frame.rs  hook.rs  mod.rs  reader.rs
src/pkrd/game/xy/: frame.rs  hook.rs  reader.rs
src/pkrd/game_hook/: hook.rs  mod.rs  patch.rs
src/pkrd/gsp/: font.rs  gsp_process.rs  mod.rs
src/pkrd/hook/: hookable_process.rs  mod.rs  supported_title.rs
src/pkrd/hook/hookable_process/: config.rs  mod.rs  process.rs
src/pkrd/reader/: gen6.rs  gen7.rs  gen_6.rs  gen_7.rs  mod.rs
src/pkrd/reader/pkm/: mod.rs  pk6.rs  pk7.rs  pkx.rs  poke_crypto.rs
src/pkrd/reader/pkm/types/: ability.rs  gender.rs  gender_ratio.rs  hidden_power.rs  language.rs  mod.rs  moves.rs  nature.rs  party_slot.rs  species.rs  stats.rs
src/pkrd/rng/: gen6.rs  gen7.rs  mod.rs  mt.rs  sfmt.rs  tinymt.rs
src/pkrd/views/: daycare_view.rs  game_views.rs  mod.rs  party_view.rs  pkx.rs  rng6.rs  rng7.rs  view.rs  wild_view.rs
src/pkrd/views/gen6/: daycare.rs  handler.rs  help.rs  mod.rs  rng.rs
src/pkrd/views/gen7/: daycare.rs  handler.rs  help.rs  mod.rs  rng.rs
src/pkrd/views/pkm/: mod.rs  party.rs  pkx.rs  wild.rs
src/rng/: mod.rs  mt.rs  rng_wrapper.rs  sfmt.rs  tiny_mt.rs
src/transporter/: draw.rs  frame.rs  mod.rs  reader.rs
src/utils/: circular_counter.rs  daycare.rs  make_arm_branch.rs  mod.rs  party_slot.rs  show_view.rs  string.rs
