[package]
name = "pokereader"
version = "0.3.0"
edition = "2021"

[dependencies]
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "4bc5adf" }
num_enum = { version = "0.5", default-features = false }
once_cell = "1.16"
pkm-rs = { git = "https://github.com/zaksabeast/pkm-rs.git", rev = "b8e739f" }
pnp = { git = "https://github.com/zaksabeast/3ds-Plug-n-play.git", rev = "e39f5eb" }
wee_alloc = "0.4.5"

[lib]
crate-type = ["cdylib", "staticlib"]

[profile.release]
opt-level = 3
lto = true
