[package]
name = "pokereader"
version = "0.3.0"
edition = "2021"

[dependencies]
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "4bc5adf" }
num_enum = { version = "0.5", default-features = false }
once_cell = { version = "1.16", default-features = false }
pkm-rs = { git = "https://github.com/zaksabeast/pkm-rs.git", rev = "b8e739f" }
linked_list_allocator = "0.10"

[features]
# cfg(doctest) doesn't appear to have worked for a while now, and there's a lot of confusion around it.
# This is a (hopefully temporary) workaround.
# cargo test --features test_stubs
test_stubs = []

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = 2
lto = false
panic = "abort"

[profile.dev]
panic = "abort"
