[package]
name = "pokereader"
version = "0.5.0"
edition = "2021"

[dependencies]
no_std_io = { git = "https://github.com/zaksabeast/no_std_io.git", rev = "4bc5adf" }
num_enum = { version = "0.5", default-features = false }
once_cell = { version = "1.16", default-features = false }
pkm-rs = { git = "https://github.com/zaksabeast/pkm-rs.git", rev = "a993592" }
libc_alloc = "1.0.6"
chrono = { version = "0.4.34", default-features = false, features = ["alloc"] }

[features]
# cfg(doctest) doesn't appear to have worked for a while now, and there's a lot of confusion around it.
# This is a (hopefully temporary) workaround.
# cargo test --features test_stubs
test_stubs = []

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = 1
lto = false
panic = "abort"

[profile.dev]
panic = "abort"
