[package]
name = "pokereader"
version = "0.7.2"
edition = "2021"

[dependencies]
binrw = { version = "0.14", default-features = false }
num_enum = { version = "0.5", default-features = false }
once_cell = { version = "1.16", default-features = false }
pkm-rs = { git = "https://github.com/zaksabeast/pkm-rs.git", rev = "9d1c647" }
libc_alloc = "1.0.6"
chrono = { version = "0.4.34", default-features = false, features = ["alloc"] }

[features]
# cfg(doctest) doesn't appear to have worked for a while now, and there's a lot of confusion around it.
# This is a (hopefully temporary) workaround.
# cargo test --features test_stubs
test_stubs = []

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = 1
lto = false
panic = "abort"

[profile.dev]
panic = "abort"
